created the register page

--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body{
     background-color: rgba(235, 216, 195, 1);
+    color: rgba(117, 89, 125, 1);
+    font-family: Roboto, sans-serif;
+    margin: auto;
 }
 nav{
     background-color: rgba(255, 238, 238, 1);
