--- a/style.css
+++ b/style.css
@@ -26,12 +26,7 @@ nav{
    margin:5%;
     padding-top: 2px;
 }
-h3{
-    color:maroon;
-    font-weight:bold;
-    font-family: 'Times New Roman', Times, serif;
-}
-img{
+.img-with-text > img{
     border-radius: 50%;
     margin: 20px;
     position: relative; 
