--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body{
     color: rgba(117, 89, 125, 1);
     font-family: Roboto, sans-serif;
     margin: auto;
+    background-image: url(./Pregnancy-Vaccines-protect-baby-crop.png);
+    background-repeat:no-repeat;
+    background-position: left;
+    background-size: contain;
 }
 nav{
     background-color: rgba(255, 238, 238, 1);
@@ -46,4 +50,67 @@ nav{
     text-align: center;
     color:black;
     font-weight: bold;
+}
+
+* {
+    box-sizing: border-box;
+    font-family: -apple-system, BlinkMacSystemFont, "segoe ui", roboto, oxygen, ubuntu, cantarell, "fira sans", "droid sans", "helvetica neue", Arial, sans-serif;
+    font-size: 16px;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.login {
+    width: 400px;
+    background-color: #c4a3a3;
+    box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.3);
+    margin: 100px auto;
+}
+.login h1 {
+    text-align: center;
+    color: #532d53;
+    font-size: 24px;
+    padding: 20px 0 20px 0;
+    border-bottom: 1px solid #dee0e4;
+}
+.login form {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-top: 20px;
+}
+.login form label {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    background-color:rgba(255, 238, 238, 1);
+    color: #aa3333;
+}
+.login form input[type="password"], .login form input[type="text"] {
+    width: 310px;
+    height: 50px;
+    border: 1px solid #dee0e4;
+    margin-bottom: 20px;
+    padding: 0 15px;
+}
+.login form input[type="submit"] {
+    width: 100%;
+    padding: 15px;
+   margin-top: 20px;
+    background-color: rgba(255, 238, 238, 1);
+    border: 0;
+    cursor: pointer;
+    font-weight: bold;
+    color: #ffffff;
+    transition: background-color 0.2s;
+}
+.login form input[type="submit"]:hover {
+  background-color: rgba(117, 89, 125, 1);
+    transition: background-color 0.2s;
+}
+
+.container {
+    text-align: left;
 }
