updated the bulletin html

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ nav{
     color:black;
     font-weight: bold;
 }
-.col-3{
+.imgbox{
         display:flex;
         padding: 5px;
         margin:3%;
