--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ nav{
     text-align:center;
 }
 .column1{
-   display:flex;
+    display:flex;
     padding: 5px;
 }
 .img-with-text{
@@ -49,7 +49,16 @@ nav{
     font-weight: bold;
 }
 .imgbox{
-        display:flex;
-        padding: 5px;
-        margin:3%;
+    display:flex;
+    padding: 5px;
+    margin:3%;
+}
+.result_dropbox{
+    margin: 3%;
+}
+.result_header{
+    color:black;
+    font-weight:bolder;
+    font-size:20pt;
+    margin:8%;
 }
