--- a/css/quiz.css
+++ b/css/quiz.css
@@ -4,12 +4,12 @@ body {
     font-family: 'Roboto', sans-serif;
   }
   
-  h1 {
+  /* h1 {
     position: relative;
     color: #fff;
     opacity: 0;
     transition: .8s ease-in-out;
-  }
+  } */
   
   #progress {
     position: absolute;
@@ -33,7 +33,7 @@ body {
   #register {
     background: #fff;
     position: relative;
-    width: 410px;
+    width: 80%;
     padding: 2px 15px 20px 15px;
     box-shadow: 0 16px 24px 2px rgba(0,0,0,0.14), 0 6px 30px 5px rgba(0,0,0,0.12), 0 8px 10px -5px rgba(0,0,0,0.3);
     transition: transform .1s ease-in-out;
@@ -63,7 +63,7 @@ body {
   #inputContainer {
     position: relative;
     opacity: 0;
-    width: 350px;
+    width: 90%;
     margin-top: 25px;
     transition: opacity .3s ease-in-out;
   }
@@ -95,16 +95,4 @@ body {
     font-size: 11px;
     font-weight: normal;
     color: #9e9e9e;
-  }
-  
-  #inputProgress {
-    position: absolute;
-    border-bottom: 2px solid #25a3ff;
-    padding: 3px 0;
-    width: 0;
-    transition: width .6s ease-in-out;
-  }
-  
-  .wrong #inputProgress {
-    border-color: #ff2d26;
   }
