--- a/style.css
+++ b/style.css
@@ -31,13 +31,20 @@ nav{
     font-weight: bold;
 }
 .img-with-text > img{
-    border-radius: 50%;
+    /* border-radius: 20%; */
+    /* border: solid #532d53; */
     margin: 0px;
+    padding-top: 10px;
     position: relative; 
-    width: 20vw;
-    height: 20vw; 
-    overflow: hidden; 
-    background-color:white
+    /* width: 20vw;
+    height: 20vw;  */
+    display: block;
+    margin-left: auto;
+  margin-right: auto;
+  height: 80%;
+  /* width: 50%; */
+    /* overflow: hidden;  */
+    /* background-color:white */
 }
 .img-with-text > a{
     font-size: 4vh;
@@ -117,4 +124,7 @@ nav{
     background-repeat:repeat;
     background-position: left;
     background-size:cover;
+}
+svg {
+    text-shadow: 5px 7px 10px rgba(1, 1, 1, 0.3);
 }
