--- a/homepage.css
+++ b/homepage.css
@@ -169,3 +169,14 @@ MAGIC
   line-height: 1.2;
   pointer-events: none;
 }
+.btn1{
+  background-color:black;
+  border:pink;
+  color: pink;
+  font-weight: bold;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
