--- a/homepage.css
+++ b/homepage.css
@@ -134,40 +134,28 @@ MAGIC
 }
 .bulletinhouse{
   position: absolute;
-  width: 100%;
-  height: auto;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 30px;
+  top: 65%;
+  width: 95%;
   text-align: center;
-  font-size: 32px;
-  line-height: 1.2;
-  pointer-events: none;
+  font-size: 18px;
 }
 .calendarhouse{
   position: absolute;
-  width: 100%;
-  height: auto;
-  top: 0;
-  left: 0;
-  padding: 30px;
-  text-align: center;
-  font-size: 32px;
-  line-height: 1.2;
-  pointer-events: none;
+  bottom: 20px;
+  left: 230px;
+  font-size: 18px;
 }
 .profilehouse{
   position: absolute;
-  width: 100%;
-  height: auto;
-  top: 0;
-  left: 0;
-  padding: 30px;
-  text-align: center;
-  font-size: 32px;
-  line-height: 1.2;
-  pointer-events: none;
+  top: 50%;
+  right: 25%;
+  font-size: 18px;
+}
+.infohubhouse{
+  position: absolute;
+  bottom: 8px;
+  right: 9%;
+  font-size: 18px;
 }
 .btn1{
   background-color:black;
