--- a/css/login.css
+++ b/css/login.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@200&family=Playfair+Display&display=swap');
 
 *,
 *::before,
@@ -10,14 +10,15 @@
 
 body,
 input {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Mulish', sans-serif;
+  
 }
 
 main {
   width: 100%;
   min-height: 100vh;
   overflow: hidden;
-  background-color: #ff8c6b;
+  background: linear-gradient(to right, #f5ffd8, #ffe2da, #f2eeeb);
   padding: 2rem;
   display: flex;
   align-items: center;
@@ -79,7 +80,7 @@ form.sign-up-form {
 }
 
 .logo img {
-  width: 27px;
+  width: 90px;
   margin-right: 0.3rem;
 }
 
@@ -159,7 +160,7 @@ label {
   display: inline-block;
   width: 100%;
   height: 43px;
-  background-color: #151111;
+  background-color: rosybrown;
   color: #fff;
   border: none;
   cursor: pointer;
@@ -170,7 +171,7 @@ label {
 }
 
 .sign-btn:hover {
-  background-color: #8371fd;
+  background-color: rgb(88, 60, 60);
 }
 
 .text {
