--- a/css/quiz.css
+++ b/css/quiz.css
@@ -222,7 +222,7 @@ footer .form-control {
   font-weight: bold; 
 }
 
-.button {
+.buttonQuiz {
   background-color: rosybrown; /* Green */
   border: none;
   color: white;
