--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@200&family=Playfair+Display&display=swap');
+
 
 html,
 button,
@@ -158,7 +160,7 @@ MAGIC
   font-size: 18px;
 }
 .btn1{
-  background-color:black;
+  background-color:rgba(0, 0, 0, 0.533);
   border:pink;
   color: pink;
   font-weight: bold;
@@ -167,4 +169,5 @@ MAGIC
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+  font-family: 'Mulish', sans-serif;
 }
