--- a/css/calendar.css
+++ b/css/calendar.css
@@ -1,17 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@200&family=Playfair+Display&display=swap');
+
 
 /* (A) ENTIRE PAGE */
 * {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Mulish', sans-serif;
   box-sizing: border-box;
 }
 
-body { padding: 30px; 
-      margin: 0; 
+body { 
+  /* padding: 30px;  */
+  margin: 0; 
     }
+
+
 :root {
-  --bg-color-a: #e7a9ca; /* page header + form label */
-  --bg-color-b: #be9cc2; /* calendar header */
-  --bg-color-c: #ce54b5; /* buttons */
+  --bg-color-a:rosybrown; /* page header + form label */
+  --bg-color-b: rgba(66,97,118,255); /* calendar header */
+  --bg-color-c: rosybrown; /* buttons */
+  --bg-color-d: rgb(88, 60, 60);
 }
 .hide { display: none !important; }
 
@@ -26,7 +32,7 @@ body { padding: 30px;
   color: #fff; background: 0;
   cursor: pointer;
 }
-#calPeriod option { color: #000; }
+#calPeriod option { color: #000;}
 #calYear {
   width: 100px;
   margin-left: 10px;
@@ -45,18 +51,18 @@ body { padding: 30px;
 }
 
 /* (C3) BODY - INDIVIDUAL DAYS */
-.calBlank { background: #eee; }
-.calToday { background: #feffd3; }
-.calToday .cellDate { color: #ff9b9b; }
+.calBlank { background: rgba(0, 0, 0, 0.101); }
+.calToday { background: linear-gradient(to right, #eecda3ad, #ef629f56); }
+.calToday .cellDate { color: black; }
 .calBody .calCell {
-  border: 1px solid #f5f5f5;
+  border: 1px solid rgba(65, 62, 62, 0.077);
   min-height: 80px;
 }
 .cellDate, .evt { padding: 5px; }
 .cellDate {
   font-size: 14px;
   font-weight: 700;
-  color: #b5b5b5;
+  color: rgb(65, 62, 62, 0.7);
 }
 .evt {
   font-size: 14px;
@@ -101,4 +107,12 @@ body { padding: 30px;
   border: 0; padding: 10px; margin: 10px 2px 0 0;
   color: #fff; background: var(--bg-color-c);
   cursor: pointer;
+}
+
+#calForm input[type=button]:hover, #calForm input[type=submit]:hover{
+  background-color:var(--bg-color-d) ; 
+}
+
+.calBody .calCell:hover{
+  background-color: rgba(188, 143, 143, 0.602);
 }
