--- a/css/styleM.css
+++ b/css/styleM.css
@@ -305,3 +305,9 @@ footer .form-control {
   p {
     text-align: left;
   }
+
+h2  {
+    font-family: 'Playfair Display', serif;
+    color: rgb(65, 62, 62);
+    text-align: center;
+  }
