--- a/bulletin/bulletin.scss
+++ b/bulletin/bulletin.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Cardo:400i|Rubik:400,700&display=swap');
 
-$imageIds: 'baby_pacifier.jpg', 'milk_bottle.jpg', 'pram.jpg', 'stretch_marks.png';
+$imageIds: 'pexels-ivan-samkov-8504239.jpg', 'pexels-anna-shvets-11369284.jpg', 'pexels-william-fortunato-6393383.jpg', 'stretch_marks.png';
 
 $bp-md: 600px;
 $bp-lg: 800px;
@@ -16,13 +16,19 @@ $bp-lg: 800px;
   box-sizing: border-box;
 }
 
-html, body {
-  height: 100%;
+body {
+  /* background: #466368; */
+  background: linear-gradient(to right, #f5ffd8, #ffe2da, #f2eeeb);
+  border-radius: 6px;
+  height: 120px;
+  font-family: 'Mulish', sans-serif;
+  margin: 10px
 }
 
-body {
+.body {
   display: grid;
   place-items: center;
+
 }
 
 .page-content {
@@ -137,6 +143,7 @@ body {
   font-size: 1.3rem;
   font-weight: bold;
   line-height: 1.2;
+  
 }
 
 // .copy {
@@ -211,4 +218,94 @@ body {
       transition-duration: 0s;
     }
   }
+}
+
+.nav-link {
+  color: rgb(65, 62, 62, 0.7);
+  font-weight: bold;
+  font-family: 'Mulish', sans-serif;
+  /* font-style: italic; */
+  position:relative;
+  z-index: 1;
+  padding: 8px;
+  display:inline-block;
+
+}
+
+/* nav {
+  width: 80%;
+  margin: 0 auto;
+  background: #fff;
+  padding: 50px 0;
+  box-shadow: 0px 5px 0px #dedede;
+} */
+nav ul {
+  list-style: none;
+  text-align: center;
+}
+nav ul li {
+  display: inline-block;
+}
+nav ul li a {
+  display: block;
+  padding: 15px;
+  text-decoration: none;
+  color: #aaa;
+  font-weight: 800;
+  /* text-transform: uppercase; */
+  margin: 0 10px;
+}
+
+.nav-link,
+.nav-link:after,
+.nav-link:before {
+transition: all .7s;
+}
+nav ul li a:hover {
+color: rgb(65, 62, 62);
+}
+
+/* .nav-link:hover {
+  background-color: rgba(176, 184, 180, 255);
+} */
+
+.nav-link::after {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+  width: 100%;
+  height: 1px;
+  content: '.';
+  color: transparent;
+  /* background: #ecced1; */
+  /* background: linear-gradient(to right, #eecda3ad, #ef629f56);  */
+  background-color: rgba(188, 143, 143, 0.392) ;
+  opacity: 0 ;
+  border-radius: 10px;
+  visibility: none;
+  opacity: 0;
+  z-index: -1;
+}
+
+.nav-link:hover::after {
+  opacity: 1;
+  visibility: visible;
+  height: 100%;
+}
+
+h1 {
+  font-family: 'Playfair Display', serif;
+  color: rgb(65, 62, 62);
+  text-align: center;
+
+}
+
+h3  {
+  font-family: 'Playfair Display', serif;
+  color: rgb(65, 62, 62);
+  text-align: center;
 }
