--- a/bulletin/bulletin.css
+++ b/bulletin/bulletin.css
@@ -19,31 +19,7 @@ body {
   margin: 10px;
 }
 
-.body {
-  display: grid;
-  place-items: center;
-}
-
-.page-content {
-  display: grid;
-  grid-gap: 1rem;
-  padding: 1rem;
-  max-width: 1024px;
-  margin: 0 auto;
-  font-family: var(--font-sans);
-}
-@media (min-width: 600px) {
-  .page-content {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-@media (min-width: 800px) {
-  .page-content {
-    grid-template-columns: repeat(4, 1fr);
-  }
-}
-
-.card {
+.card1 {
   position: relative;
   display: flex;
   align-items: flex-end;
@@ -56,11 +32,11 @@ body {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1), 0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1), 0 16px 16px rgba(0, 0, 0, 0.1);
 }
 @media (min-width: 600px) {
-  .card {
+  .card1 {
     height: 350px;
   }
 }
-.card:before {
+.card1:before {
   content: "";
   position: absolute;
   top: 0;
@@ -72,7 +48,7 @@ body {
   transition: transform calc(var(--d) * 1.5) var(--e);
   pointer-events: none;
 }
-.card:after {
+.card1:after {
   content: "";
   display: block;
   position: absolute;
@@ -85,17 +61,66 @@ body {
   transform: translateY(-50%);
   transition: transform calc(var(--d) * 2) var(--e);
 }
-.card:nth-child(1):before {
+.card1:nth-child(1):before {
   background-image: url(../img/pexels-ivan-samkov-8504239.jpg);
 }
-.card:nth-child(2):before {
+.card1:nth-child(2):before {
   background-image: url(../img/pexels-anna-shvets-11369284.jpg);
 }
-.card:nth-child(3):before {
+.card1:nth-child(3):before {
   background-image: url(../img/pexels-william-fortunato-6393383.jpg);
 }
-.card:nth-child(4):before {
-  background-image: url(../img/stretch_marks.png);
+
+.card2 {
+  position: relative;
+  display: flex;
+  align-items: flex-end;
+  overflow: hidden;
+  padding: 1rem;
+  width: 100%;
+  text-align: center;
+  color: whitesmoke;
+  background-color: whitesmoke;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1), 0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1), 0 16px 16px rgba(0, 0, 0, 0.1);
+}
+@media (min-width: 600px) {
+  .card2 {
+    height: 350px;
+  }
+}
+.card2:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 110%;
+  background-size: cover;
+  background-position: 0 0;
+  transition: transform calc(var(--d) * 1.5) var(--e);
+  pointer-events: none;
+}
+.card2:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 200%;
+  pointer-events: none;
+  background-image: linear-gradient(to bottom, hsla(0deg, 0%, 0%, 0) 0%, hsla(0deg, 0%, 0%, 0.009) 11.7%, hsla(0deg, 0%, 0%, 0.034) 22.1%, hsla(0deg, 0%, 0%, 0.072) 31.2%, hsla(0deg, 0%, 0%, 0.123) 39.4%, hsla(0deg, 0%, 0%, 0.182) 46.6%, hsla(0deg, 0%, 0%, 0.249) 53.1%, hsla(0deg, 0%, 0%, 0.32) 58.9%, hsla(0deg, 0%, 0%, 0.394) 64.3%, hsla(0deg, 0%, 0%, 0.468) 69.3%, hsla(0deg, 0%, 0%, 0.54) 74.1%, hsla(0deg, 0%, 0%, 0.607) 78.8%, hsla(0deg, 0%, 0%, 0.668) 83.6%, hsla(0deg, 0%, 0%, 0.721) 88.7%, hsla(0deg, 0%, 0%, 0.762) 94.1%, hsla(0deg, 0%, 0%, 0.79) 100%);
+  transform: translateY(-50%);
+  transition: transform calc(var(--d) * 2) var(--e);
+}
+.card2:nth-child(1):before {
+  background-image: url(../img/monika-kozub-Q_Avkw0mcfw-unsplash.jpg);
+}
+.card2:nth-child(2):before {
+  background-image: url(../img/tamanna-rumee-TOigBgviy_g-unsplash.jpg);
+}
+.card2:nth-child(3):before {
+  background-image: url(../img/pawel-czerwinski-NttQeISxYko-unsplash.jpg);
 }
 
 .content {
@@ -127,11 +152,11 @@ body {
   letter-spacing: 0.025rem;
   text-transform: uppercase;
   color: white;
-  background-color: black;
+  background-color: rosybrown;
   border: none;
 }
 .btnn:hover {
-  background-color: #0d0d0d;
+  background-color: #674646;
 }
 .btnn:focus {
   outline: 1px dashed yellow;
@@ -262,8 +287,79 @@ h1 {
   text-align: center;
 }
 
+.footer {
+  bottom: 0;
+  width: 100%;
+  /* height: 200px; */
+}
+
+footer {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #fff0eb;
+  color: rgb(65, 62, 62);
+  font-family: "Mulish", sans-serif;
+}
+
+footer a {
+  color: #999;
+  text-decoration: none;
+}
+
+footer a:hover, footer a:focus {
+  color: rgb(65, 62, 62);
+  text-decoration: none;
+  /* border-bottom:1px dotted rosybrown; */
+}
+
+footer .form-control {
+  background: linear-gradient(to right, rgba(238, 205, 163, 0.6784313725), rgba(239, 98, 159, 0.337254902));
+  box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.1);
+  border: none;
+  resize: none;
+  color: rgb(65, 62, 62);
+  padding: 0.7em 1em;
+}
+
+.button {
+  background-color: rosybrown;
+  border: none;
+  color: white;
+  padding: 5px 20px;
+  /* text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px; */
+}
+
+button:hover {
+  background-color: rgb(88, 60, 60);
+}
+
+.before {
+  margin-bottom: 100px;
+}
+
+.contactUs {
+  color: rgb(65, 62, 62);
+  font-weight: bold;
+}
+
 h3 {
   font-family: "Playfair Display", serif;
   color: rgb(65, 62, 62);
   text-align: center;
+  margin-top: 20vh;
+}
+
+p {
+  margin-bottom: 10vh;
+  text-align: center;
+}
+
+.center {
+  margin-bottom: 15vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }/*# sourceMappingURL=bulletin.css.map */
