--- a/bulletin/bulletin.scss
+++ b/bulletin/bulletin.scss
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Cardo:400i|Rubik:400,700&display=swap');
 
-$imageIds: 'pexels-ivan-samkov-8504239.jpg', 'pexels-anna-shvets-11369284.jpg', 'pexels-william-fortunato-6393383.jpg', 'stretch_marks.png';
+$imageIds1: 'pexels-ivan-samkov-8504239.jpg', 'pexels-anna-shvets-11369284.jpg', 'pexels-william-fortunato-6393383.jpg';
+
+$imageIds2: 'monika-kozub-Q_Avkw0mcfw-unsplash.jpg', 'tamanna-rumee-TOigBgviy_g-unsplash.jpg', 'pawel-czerwinski-NttQeISxYko-unsplash.jpg';
 
 $bp-md: 600px;
 $bp-lg: 800px;
@@ -25,32 +27,30 @@ body {
   margin: 10px
 }
 
-.body {
-  display: grid;
-  place-items: center;
+// .body {
+//   display: grid;
+//   place-items: center;
 
-}
+// }
 
-.page-content {
-  display: grid;
-  grid-gap: 1rem;
-  padding: 1rem;
-  max-width: 1024px;
-  margin: 0 auto;
-  font-family: var(--font-sans);
+// .pageContent {
+//   display: grid;
+//   grid-gap: 1rem;
+//   padding: 1rem;
+//   max-width: 1024px;
+//   margin: 0 auto;
+//   font-family: var(--font-sans);
   
-  @media (min-width: $bp-md) {
-    grid-template-columns: repeat(2, 1fr);
-  }
+//   @media (min-width: $bp-md) {
+//     grid-template-columns: repeat(2, 1fr);
+//   }
   
-  @media (min-width: $bp-lg) {
-    grid-template-columns: repeat(4, 1fr);
-  }
-}
+//   @media (min-width: $bp-lg) {
+//     grid-template-columns: repeat(4, 1fr);
+//   }
+// }
 
-
-
-.card {  
+.card1 {  
   position: relative;
   display: flex;
   align-items: flex-end;
@@ -115,8 +115,82 @@ body {
     transition: transform calc(var(--d) * 2) var(--e);
   }
   
-  @each $id in $imageIds {
-    $i: index($imageIds, $id);
+  @each $id in $imageIds1 {
+    $i: index($imageIds1, $id);
+    
+    &:nth-child(#{$i}):before {
+      background-image: url(../img/#{$id});
+    }
+  }
+}
+
+.card2 {  
+  position: relative;
+  display: flex;
+  align-items: flex-end;
+  overflow: hidden;
+  padding: 1rem;
+  width: 100%;
+  text-align: center;
+  color: whitesmoke;
+  background-color: whitesmoke;
+  box-shadow: 0 1px 1px rgba(0,0,0,0.1), 
+    0 2px 2px rgba(0,0,0,0.1), 
+    0 4px 4px rgba(0,0,0,0.1), 
+    0 8px 8px rgba(0,0,0,0.1),
+    0 16px 16px rgba(0,0,0,0.1);
+  
+  @media (min-width: $bp-md) {
+    height: 350px;
+  }
+  
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 110%;
+    background-size: cover;
+    background-position: 0 0;
+    transition: transform calc(var(--d) * 1.5) var(--e);
+    pointer-events: none;
+  }
+  
+  &:after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 200%;
+    pointer-events: none;
+    background-image: linear-gradient(
+      to bottom,
+      hsla(0, 0%, 0%, 0) 0%,
+      hsla(0, 0%, 0%, 0.009) 11.7%,
+      hsla(0, 0%, 0%, 0.034) 22.1%,
+      hsla(0, 0%, 0%, 0.072) 31.2%,
+      hsla(0, 0%, 0%, 0.123) 39.4%,
+      hsla(0, 0%, 0%, 0.182) 46.6%,
+      hsla(0, 0%, 0%, 0.249) 53.1%,
+      hsla(0, 0%, 0%, 0.320) 58.9%,
+      hsla(0, 0%, 0%, 0.394) 64.3%,
+      hsla(0, 0%, 0%, 0.468) 69.3%,
+      hsla(0, 0%, 0%, 0.540) 74.1%,
+      hsla(0, 0%, 0%, 0.607) 78.8%,
+      hsla(0, 0%, 0%, 0.668) 83.6%,
+      hsla(0, 0%, 0%, 0.721) 88.7%,
+      hsla(0, 0%, 0%, 0.762) 94.1%,
+      hsla(0, 0%, 0%, 0.790) 100%
+    );
+    transform: translateY(-50%);
+    transition: transform calc(var(--d) * 2) var(--e);
+  }
+  
+  @each $id in $imageIds2 {
+    $i: index($imageIds2, $id);
     
     &:nth-child(#{$i}):before {
       background-image: url(../img/#{$id});
@@ -162,11 +236,11 @@ body {
   letter-spacing: 0.025rem;
   text-transform: uppercase;
   color: white;
-  background-color: black;
+  background-color: rosybrown;
   border: none;
   
   &:hover {
-    background-color: lighten(black, 5%);
+    background-color: lighten(rgb(88, 60, 60), 5%);
   }
   
   &:focus {
@@ -304,8 +378,81 @@ h1 {
 
 }
 
+.footer {
+  bottom: 0;
+  width: 100%;
+  /* height: 200px; */
+}
+
+
+footer {
+padding-top: 15px;
+padding-bottom: 15px;
+background-color: #fff0eb;
+color: rgb(65, 62, 62);
+font-family: 'Mulish', sans-serif;
+}
+
+footer a {
+color: #999;
+text-decoration:none;
+}
+
+footer a:hover, footer a:focus {
+color: rgb(65, 62, 62);
+text-decoration:none;
+/* border-bottom:1px dotted rosybrown; */
+}
+
+footer .form-control {
+  background: linear-gradient(to right, #eecda3ad, #ef629f56);
+  box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.1);
+  border: none;
+  resize: none;
+  color: rgb(65, 62, 62);
+  padding: 0.7em 1em;
+}
+
+.button {
+  background-color: rosybrown;
+  border: none;
+  color: white;
+  padding: 5px 20px;
+  /* text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px; */
+}
+
+button:hover {
+  background-color: rgb(88, 60, 60);
+}
+
+.before {
+  margin-bottom: 100px;
+}
+
+.contactUs {
+  color: rgb(65, 62, 62);
+  font-weight: bold; 
+}
+
 h3  {
   font-family: 'Playfair Display', serif;
   color: rgb(65, 62, 62);
   text-align: center;
+  margin-top: 20vh;
+}
+
+p {
+  margin-bottom: 10vh;
+  text-align: center;
+}
+
+.center {
+  // margin-top: 30vh;
+  margin-bottom: 15vh ; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
