--- a/bulletin/bulletin.scss
+++ b/bulletin/bulletin.scss
@@ -418,6 +418,7 @@ footer .form-control {
   border: none;
   color: white;
   padding: 5px 20px;
+  
   /* text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -447,6 +448,7 @@ h3  {
 p {
   margin-bottom: 10vh;
   text-align: center;
+  font-family: 'Mulish', sans-serif;
 }
 
 .center {
