--- a/bulletin/bulletin.css
+++ b/bulletin/bulletin.css
@@ -80,7 +80,7 @@ body {
   width: 100%;
   text-align: center;
   color: whitesmoke;
-  background-color: whitesmoke;
+  background-color: rgb(255, 254, 254);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1), 0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1), 0 16px 16px rgba(0, 0, 0, 0.1);
 }
 @media (min-width: 600px) {
@@ -349,12 +349,13 @@ h3 {
   font-family: "Playfair Display", serif;
   color: rgb(65, 62, 62);
   text-align: center;
-  margin-top: 20vh;
+  margin-top: 10vh;
 }
 
 p {
   margin-bottom: 10vh;
   text-align: center;
+  font-family: "Mulish", sans-serif;
 }
 
 .center {
