--- a/bulletin/bulletin.scss
+++ b/bulletin/bulletin.scss
@@ -133,7 +133,7 @@ body {
   width: 100%;
   text-align: center;
   color: whitesmoke;
-  background-color: whitesmoke;
+  background-color: rgb(255, 254, 254);
   box-shadow: 0 1px 1px rgba(0,0,0,0.1), 
     0 2px 2px rgba(0,0,0,0.1), 
     0 4px 4px rgba(0,0,0,0.1), 
@@ -442,7 +442,7 @@ h3  {
   font-family: 'Playfair Display', serif;
   color: rgb(65, 62, 62);
   text-align: center;
-  margin-top: 20vh;
+  margin-top: 10vh;
 }
 
 p {
