--- a/css/podium.css
+++ b/css/podium.css
@@ -2,19 +2,19 @@
     width: auto;
 }
 #podium0 { /* gold */
-  background: linear-gradient(to right,#BF953F, #FCF6BA, #B38728);
-    height: 90vh;
-}
-#podium1 { /* silver */
-  background: linear-gradient(to right,#787878, #b5b5b5, #e3e3e3, #b5b5b5, #787878);
+  background: linear-gradient(to right,#e6be8a, #FCF6BA, #e6be8a);
     height: 70vh;
 }
-#podium2 { /* bronze */
-  background: linear-gradient(to right,#844414, #cf7d52, #fcd5be, #cf7d52, #844414);
+#podium1 { /* silver */
+  background: linear-gradient(to right,#c0c0c0, #fcfcfc, #c0c0c0);
     height: 50vh;
 }
+#podium2 { /* bronze */
+  background: linear-gradient(to right,#bc7c77, #fcd5be, #bc7c77);
+    height: 30vh;
+}
 td {
-    height: 100vh;
+    height: 80vh;
     vertical-align: bottom;
     padding: 5px;
     text-align: center;
@@ -35,3 +35,4 @@ select {
   width:50% ; 
   text-align: center;
 }
+
