--- a/css/homepage.css
+++ b/css/homepage.css
@@ -18,6 +18,10 @@ body {
     background: linear-gradient(to right, #f5ffd8, #ffe2da, #f2eeeb);
 }
 
+p{
+  background-color:#D9FCFF;
+}
+
 /*
  * Remove text-shadow in selection highlight: h5bp.com/i
  * These selection rule sets have to be separate.
