--- a/css/homepage.css
+++ b/css/homepage.css
@@ -24,7 +24,7 @@ p{
   position:fixed;
   color:black;
   font-weight:bold;
-  bottom:0;
+  right:0;
   margin:auto;
   padding:10px;
   border-style:double;
@@ -39,7 +39,7 @@ p{
 
 
 .backgroundpic {
-  background-image: url(../img/4.svg);
+  background-image: url(../img/profilefinal.svg);
   background-repeat: no-repeat;
   width: 100%; 
   height: 100%;
@@ -51,29 +51,26 @@ p{
 
 .bulletinhouse{
   position: absolute;
-  top: 55%;
-  left: 45%;
-  font-size: 18px;
+  top: 30vh;
+  left: 35vw;
 }
 .calendarhouse{
   position: absolute;
-  bottom: 15%;
-  left: 20%;
-  font-size: 18px;
+  top:50vh;
+  left:6vw;
 } 
 .profilehouse{
   position: absolute;
-  top: 40%;
-  right: 25%;
-  font-size: 18px;
+  top: 16vh;
+  left:60vw;
+ 
 }
  .infohubhouse{
   position: absolute;
-  bottom: 10%;
-  right: 21%;
-  font-size: 18px;
+  top:65vh;
+  left:70vw;
 } 
-.btn1{
+/* .btn1{
   background-color: rgba(88, 60, 60, 0.907);
   border: none;
   color: white;
@@ -89,4 +86,4 @@ p{
 .btn1:hover {
   background-color: rosybrown;
   color:white ; 
-}
+} */
