--- a/css/homepage.css
+++ b/css/homepage.css
@@ -20,15 +20,13 @@ body {
 }
 
 p{
-  background-color:#D4FAFA;
+  background-color:transparent;
   position:fixed;
   color:black;
   font-weight:bold;
-  right:0;
+  top:20vh;
   margin:auto;
   padding:10px;
-  border-style:double;
-  border-color:pink;
 }
 
 /*
@@ -46,7 +44,6 @@ p{
   background-size:100%;
   position: absolute;
   background-color: #b9e38d;
-  z-index:-1
 }
 
 .bulletinhouse{
