--- a/css/homepage.css
+++ b/css/homepage.css
@@ -19,7 +19,7 @@ body {
     background: linear-gradient(to right, #f5ffd8, #ffe2da, #f2eeeb);
 }
 
-p{
+/* p{
   background-color:transparent;
   position:fixed;
   color:black;
@@ -27,7 +27,7 @@ p{
   top:20vh;
   margin:auto;
   padding:10px;
-}
+} */
 
 /*
  * Remove text-shadow in selection highlight: h5bp.com/i
@@ -50,6 +50,7 @@ p{
   position: absolute;
   top: 30vh;
   left: 35vw;
+  transition: all 0.2s linear;
 }
 
 .calendarhouse{
@@ -68,6 +69,52 @@ p{
   top:65vh;
   left:70vw;
 } 
+
+
+
+.image-hover-text 
+{
+  position: absolute;
+  bottom:0;
+  width: 100%;  
+  height: 100%;
+  margin: 20 auto;
+  opacity: 0;
+  cursor: default;
+  transition: opacity 0.2s linear;
+}
+.image-hover-text:hover 
+{
+  opacity: 1;
+}
+
+
+.image-hover-text-bubble 
+{
+  position: relative;
+  width:160px;
+  height: 80px;
+  text-align: center;
+  font-family: 'Mulish', sans-serif;
+  font-weight:bold;
+  background: rgba(232, 206, 206, 0.9);
+  border: 1px solid #f1abab;
+  border-radius:10px;
+  margin: 20 auto;
+  padding: 0;
+  overflow: hidden;
+  font-size: 17px;
+  text-align: center;
+  word-wrap: break-word;
+}
+
+.image-hover-text .image-hover-text-title
+{
+  font-size: 25px;
+  display: block;
+}
+
+
 /* .btn1{
   background-color: rgba(88, 60, 60, 0.907);
   border: none;
