--- a/css/styleM.css
+++ b/css/styleM.css
@@ -204,13 +204,13 @@ footer .form-control {
 /* search bar */
 
 
-#progress {
+/* #progress {
   position: absolute;
   background: #0069ec;
   height: 100vh;
   width: 0;
   transition: width 0.2s ease-in-out;
-}
+} */
 
 .center {
   margin-top: 20vh;
@@ -259,7 +259,8 @@ footer .form-control {
     position: relative;
     opacity: 0;
     width: 90%;
-    margin-top: 25px;
+    margin-top: 2vh;
+    margin-bottom: 1.5vh;
     transition: opacity .3s ease-in-out;
   }
   
@@ -277,7 +278,7 @@ footer .form-control {
   #inputLabel {
     position: absolute;
     pointer-events: none;
-    top: 0;
+    top: 3.5px;
     left: 0;
     font-size: 20px;
     font-weight: bold;
