--- a/css/styleM.css
+++ b/css/styleM.css
@@ -358,6 +358,19 @@ h2  {
     font-weight: bold;
   }
 
+  #display #top {
+    pointer-events: auto;
+    margin-top:10vh;
+    
+  }
+
+  #top {
+    pointer-events: auto;
+    margin-top:20vh;
+    font-size:20px;
+    
+  }
+
   h3 {
     text-align: left;
     margin-top:20px;
