--- a/css/homepage.css
+++ b/css/homepage.css
@@ -12,8 +12,8 @@ textarea {
 
 body {
     font-size: 1em;
-    height: 100%;
-    width:100%;
+    height: 100vh;
+    width:100vw;
     overflow:hidden;
     line-height: 1.4;
     background: linear-gradient(to right, #f5ffd8, #ffe2da, #f2eeeb);
